--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  chat_bubbles: ^1.3.1
 
 dev_dependencies:
   flutter_test:
