--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "dev" , "feature/SEPT-38_manage-patient-appointments" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , "dev" , "feature/SEPT-38_manage-patient-appointments" ]
 
 jobs:
   build:
@@ -22,5 +22,5 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build and Test with Maven
+      run: mvn -B package --file backend/pom.xml
