Fix incorrect image container in maven.yml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: java:11
+      image: eclipse-temurin:11
 
     services:
       mysql:
