--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,28 +5,31 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" , "dev" , "feature/SEPT-38_manage-patient-appointments" ]
+    branches: [ "main" , "develop" , "feature/SEPT-38_manage-patient-appointments" ]
   pull_request:
-    branches: [ "main" , "dev" , "feature/SEPT-38_manage-patient-appointments" ]
+    branches: [ "main" , "develop" , "feature/SEPT-38_manage-patient-appointments" ]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
 
-    container:
-      image: eclipse-temurin:11
-
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: tele-med
+          MYSQL_HOST: localhost
+          MYSQL_PORT: ${{ job.services.mysql-service.ports[3306] }}
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=10s --health-retries=10
+        options: --health-cmd="mysqladmin ping" --health-interval=1s --health-timeout=10s --health-retries=10
 
     steps:
       - uses: actions/checkout@v3
+      - name: Verify tele-med DB exists
+        run: mysql --host 127.0.0.1 --port 3306 -uroot -e "SHOW DATABASES LIKE 'tele-med'"
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -35,6 +38,3 @@ jobs:
           cache: maven
       - name: Build and Test with Maven
         run: mvn -B package --file backend/pom.xml
-        env:
-          MYSQL_HOST: mysql
-          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
