Configure port to resolve local and container sql server conflict

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #debug=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
+
+# Do not modify these values; they have been configured to work with Github Actions CI/CD
+spring.datasource.url=jdbc:mysql://localhost:3307/tele-med
 spring.datasource.username=root
