--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: tele-med
           MYSQL_HOST: localhost
-          MYSQL_PORT: ${{ job.services.mysql-service.ports[3307] }}
+          MYSQL_PORT: ${{ job.services.mysql.ports[3307] }}
         ports:
           - 3307:3306
         options: --health-cmd="mysqladmin ping" --health-interval=1s --health-timeout=10s --health-retries=10
