Update maven.yml file to include all feature branches on push

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,10 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" , "develop" , "feature/SEPT-38_manage-patient-appointments" ]
+    branches:
+      - "main"
+      - "develop"
+      - "feature/**"
   pull_request:
     branches: [ "main" , "develop" , "feature/SEPT-38_manage-patient-appointments" ]
 
