--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,12 +27,12 @@ jobs:
           MYSQL_PORT: 3307
         ports:
           - 3307:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=1s --health-timeout=10s --health-retries=10
+        options: --health-cmd="mysqladmin ping" --health-interval=1s --health-timeout=10s --health-retries=5
 
     steps:
       - uses: actions/checkout@v3
       - name: Verify tele-med DB exists
-        run: mysql --host 127.0.0.1 --port 3307 -uroot -e "SHOW DATABASES LIKE 'tele-med'"
+        run: mysql --host localhost --port 3307 -u root -e "SHOW DATABASES LIKE 'tele-med';"
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
