Update CI/CDC for pull requests

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,10 @@ on:
       - "develop"
       - "feature/**"
   pull_request:
-    branches: [ "main" , "develop" , "feature/SEPT-38_manage-patient-appointments" ]
+    branches:
+      - "main"
+      - "develop"
+      - "feature/**"
 
 jobs:
 
