Update yml file Include user env var

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,10 @@ jobs:
           MYSQL_DATABASE: tele-med
           MYSQL_HOST: localhost
           MYSQL_PORT: 3307
+          MYSQL_USER: root
         ports:
           - 3307:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=1s --health-timeout=10s --health-retries=5
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
 
     steps:
       - uses: actions/checkout@v3
