--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,13 +22,12 @@ jobs:
 
     services:
       mysql:
-        image: mysql:latest
+        image: mysql:8.0
         env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: tele-med
           MYSQL_HOST: localhost
           MYSQL_PORT: 3307
-          MYSQL_USER: root
+          MYSQL_ROOT_PASSWORD: password
         ports:
           - 3307:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
