--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 #debug=true
+
+# GitHub Actions Configurations (DO NOT MODIFY)
+# Comment out when working on local machine
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3307/tele-med
 spring.datasource.username=root
 spring.datasource.password=password
+
+# Uncomment when working on local machine
+#spring.jpa.hibernate.ddl-auto=<enter-ddl-creation-method>
+#spring.datasource.url=jdbc:mysql://localhost:3306/<enter-local-database-schema-name>
+#spring.datasource.username=<enter-database-username> (usually 'root')
+#spring.datasource.password=<enter-database-password>
