--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +37,8 @@ dependencies:
   persistent_bottom_nav_bar: any
 
   talkjs_flutter: ^0.4.1
+
+  http: any
 
 dev_dependencies:
   flutter_test:
