--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,5 +40,8 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-      - name: Build and Test with Maven
-        run: mvn -B package --file backend/pom.xml
+      - name: Build and Test Authentication with Maven
+        run: mvn -B package --file backend/auth-microservice/pom.xml
+      - name: Build and Test Application with Maven
+        run: mvn -B package --file backend/backend-monolith/pom.xml
+
