--- a/backend/appointment-microservice/src/main/resources/application.properties
+++ b/backend/appointment-microservice/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 # Uncomment when working on local machine
 debug=true
-port=8081
+server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
 spring.datasource.username=root
