--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 debug=true
-port=8080
+server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
 spring.datasource.username=root
