--- a/backend/appointment-microservice/src/main/resources/application.properties
+++ b/backend/appointment-microservice/src/main/resources/application.properties
@@ -2,16 +2,16 @@
 
 # GitHub Actions Configurations (DO NOT MODIFY)
 # Comment out when working on local machine
-# port=8081
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3307/tele-med
-# spring.datasource.username=root
-# spring.datasource.password=password
-
-# Uncomment when working on local machine
-debug=true
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
+spring.datasource.url=jdbc:mysql://localhost:3307/tele-med
 spring.datasource.username=root
 spring.datasource.password=password
+
+# Uncomment when working on local machine
+# debug=true
+# server.port=8081
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
+# spring.datasource.username=root
+# spring.datasource.password=password
