--- a/backend/appointment-microservice/src/main/resources/application.properties
+++ b/backend/appointment-microservice/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 # Uncomment when working on local machine
-# debug=true
-# server.port=8081
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
-# spring.datasource.username=root
-# spring.datasource.password=password
+#debug=true
+#server.port=8081
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
+#spring.datasource.username=root
+#spring.datasource.password=sqlbusiness
