--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.password=password
 
 # Uncomment when working on local machine
 # debug=true
-# server.port=8080
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
-# spring.datasource.username=root
-# spring.datasource.password=password
+#server.port=8080
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
+#spring.datasource.username=root
+#spring.datasource.password=sqlbusiness
