--- a/backend/appointment-microservice/src/main/resources/application.properties
+++ b/backend/appointment-microservice/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.password=password
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
 #spring.datasource.username=root
-#spring.datasource.password=sqlbusiness
+#spring.datasource.password=password
