--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 # Uncomment when working on local machine
 # debug=true
 #server.port=8080
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
 #spring.datasource.username=root
-#spring.datasource.password=sqlbusiness
+#spring.datasource.password=password
