Update pubspec files with new dependencies - booking_calendar - date_generator

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,13 +33,12 @@ dependencies:
   persistent_bottom_nav_bar: any
   talkjs_flutter: ^0.4.1
   http: any
-  chat_bubbles: any
-  syncfusion_flutter_datepicker: ^20.2.49
-  time_picker_widget: ^1.0.0+10
   google_fonts: any
   intl: any
   age_calculator: ^1.0.0
   flutter_secure_storage: ^6.0.0
+  booking_calendar: ^1.1.6
+  date_generator: ^1.0.0
 
 
 dev_dependencies:
