--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: "2.18.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,7 +39,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   booking_calendar: ^1.1.6
   date_generator: ^1.0.0
-
+  interval_time_picker: ^2.0.0+5
 
 dev_dependencies:
   flutter_test:
