--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:tele-med}
 spring.datasource.username=${MYSQL_USER:root}
 # You can change the local password (password) here for local development.
-spring.datasource.password=${MYSQL_ROOT_PASSWORD:password}
+spring.datasource.password=${MYSQL_PASSWORD:password}
