Change ddl generation to update

--- a/backend/appointment-microservice/src/main/resources/application.properties
+++ b/backend/appointment-microservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # GitHub Actions and Docker Configurations
 server.port=8081
 # You can change the database generation method here.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # You can change the local host (localhost), port (3306), and database name (tele-med) here for local development.
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/tele-med
 spring.datasource.username=${MYSQL_USER:root}
