--- a/backend/prescription-microservice/src/main/resources/application.properties
+++ b/backend/prescription-microservice/src/main/resources/application.properties
@@ -1,16 +1,9 @@
-# GitHub Actions Configurations (DO NOT MODIFY)
-# Comment out when working on local machine
-#server.port=8082
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3307/tele-med
-#spring.datasource.username=root
-#spring.datasource.password=password
-
-# Uncomment when working on local machine
-# debug=true
+# GitHub Actions and Docker Configurations
 server.port=8082
+# You can change the database generation method here.
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tele-med
-spring.datasource.username=root
-spring.datasource.password=password
-
+# You can change the local host (localhost), port (3306), and database name (tele-med) here for local development.
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/tele-med
+spring.datasource.username=${MYSQL_USER:root}
+# You can change the local password (password) here for local development.
+spring.datasource.password=${MYSQL_PASSWORD:password}
