--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,12 +56,29 @@ jobs:
       - run: flutter test
         working-directory: ./frontend
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Push Auth Microservice Image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./backend/auth-microservice
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/auth-microservice:latest
+
+
       - name: Build and Push Images to Docker
         run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/auth-microservice:latest ./backend/auth-microservice
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/auth-microservice:latest ./backend/auth-microservice
           docker push ${{ secrets.DOCKER_USERNAME }}/auth-microservice:latest
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/appointment-microservice:latest ./backend/appointment-microservice
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/appointment-microservice:latest ./backend/appointment-microservice
           docker push ${{ secrets.DOCKER_USERNAME }}/appointment-microservice:latest
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/prescription-microservice:latest ./backend/prescription-microservice
-          docker push ${{ secrets.DOCKER_USERNAME }}/prescription-microservice:latest
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/prescription-microservice:latest ./backend/prescription-microservice
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/prescription-microservice:latest
