--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -3,8 +3,7 @@ server.port=8080
 # You can change the database generation method here.
 spring.jpa.hibernate.ddl-auto=update
 # You can change the local host (localhost), port (3306), and database name (tele-med) here for local development.
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:us-cdbr-east-06.cleardb.net}:${MYSQL_PORT:3306}/heroku_fdbbdb52c723fe0
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/tele-med
 spring.datasource.username=${MYSQL_USER:root}
 # You can change the local password (password) here for local development.
-spring.datasource.password=${MYSQL_PASSWORD:bf66f11b}
-#spring.datasource.hikari.max-lifetime=20000
+spring.datasource.password=${MYSQL_PASSWORD:password}
